--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "test": "npm start"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,19 @@
   },
   "homepage": "https://github.com/lynn1947/FinalTest#readme",
   "devDependencies": {
+    "antd": "^3.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.11",
+    "ipfs-js": "0.0.11",
+    "less-loader": "^4.1.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "web3": "^1.0.0-beta.34"
   },
   "dependencies": {
     "webpack": "^4.8.2"
