--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
+    "dev": "webpack-dev-server --devtool eval --colors --hot --content-base dev --history-api-fallback",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,18 +19,25 @@
   "homepage": "https://github.com/lynn1947/FinalTest#readme",
   "devDependencies": {
     "antd": "^3.5.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
     "ipfs-js": "0.0.11",
+    "jsx-loader": "^0.13.2",
+    "less": "^3.0.0",
     "less-loader": "^4.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router": "^4.2.0",
+    "react-router": "^3.2.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "webpack": "^4.8.2"
