--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --devtool eval --colors --hot --content-base dev --history-api-fallback",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+    "dev": "webpack-dev-server --hot --port 5001 --config webpack.dev.js",
+    "build": "webpack --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,28 +18,34 @@
   },
   "homepage": "https://github.com/lynn1947/FinalTest#readme",
   "devDependencies": {
-    "antd": "^3.5.2",
+    "antd": "^3.6.6",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-import": "^1.7.0",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "ipfs-js": "0.0.11",
-    "jsx-loader": "^0.13.2",
-    "less": "^3.0.0",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^2.7.3",
     "less-loader": "^4.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-router": "^3.2.1",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "web3": "^1.0.0-beta.34",
-    "webpack-cli": "^2.1.3",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.15.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "webpack": "^4.8.2"
+    "ipfs": "^0.30.1",
+    "ipfs-js": "0.0.11",
+    "orbit": "^0.1.3",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0"
   }
 }
