--- a/package.json
+++ b/package.json
@@ -40,12 +40,19 @@
   "dependencies": {
     "ipfs": "^0.30.0",
     "ipfs-js": "0.0.11",
+    "ipfs-repo": "^0.22.1",
     "orbit": "^0.1.3",
+    "quill": "^1.3.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "y-array": "^10.1.4",
+    "y-ipfs-connector": "^2.3.0",
+    "y-memory": "^8.0.9",
+    "y-richtext": "^9.0.8",
+    "yjs": "^12.3.3"
   }
 }
