--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --port 5001 --config webpack.dev.js",
-    "build": "webpack --config webpack.dev.js"
+    "dev": "set NODE_ENV=devolopment& webpack-dev-server --hot --port 5001 --config webpack.dev.js",
+    "build": "webpack --config webpack.dev.dll.js && webpack --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -35,13 +35,18 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "immutable": "^3.8.2",
     "ipfs": "^0.30.0",
     "ipfs-js": "0.0.11",
     "ipfs-repo": "^0.22.1",
-    "orbit": "^0.1.3",
+    "moment": "^2.22.2",
+    "orbit-db": "^0.19.9",
+    "orbit_": "^0.1.0",
+    "path": "^0.12.7",
     "quill": "^1.3.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -49,6 +54,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "y-array": "^10.1.4",
     "y-ipfs-connector": "^2.3.0",
     "y-memory": "^8.0.9",
