--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lynn1947/FinalTest#readme",
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^2.1.3",
     "antd": "^3.6.6",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
