--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "y-array": "^10.1.4",
     "y-ipfs-connector": "^2.3.0",
