--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "set NODE_ENV=devolopment& webpack-dev-server --hot --port 3001 --config webpack.dev.js",
+    "dev": "set NODE_ENV=devolopment& webpack-dev-server --hot --port 5001 --config webpack.dev.js",
     "build": "webpack --config webpack.dev.dll.js && webpack --config webpack.dev.js"
   },
   "repository": {
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/lynn1947/FinalTest#readme",
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^2.1.3",
-    "antd": "^3.6.6",
+    "antd": "^3.12.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-import": "^1.8.0",
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
