--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "set NODE_ENV=devolopment& webpack-dev-server --hot --port 5001 --config webpack.dev.js",
+    "dev": "set NODE_ENV=devolopment& webpack-dev-server --hot --config webpack.dev.js",
     "build": "webpack --config webpack.dev.dll.js && webpack --config webpack.dev.js"
   },
   "repository": {
@@ -34,14 +34,16 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^2.7.3",
     "less-loader": "^4.1.0",
+    "net": "^1.0.2",
     "style-loader": "^0.21.0",
     "truffle-contract": "^4.0.2",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "web3": "^1.0.0-beta.37",
+    "web3": "^1.0.0-beta.33",
     "webpack": "^4.15.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "xmlhttprequest": "^1.8.0"
   },
   "dependencies": {
     "immutable": "^3.8.2",
